fixed style issue for Specials section on mobile device

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1914,6 +1914,10 @@ section,
 
       .tab-pane {
         padding: 0 15px
+
+        h4 {
+          padding: 0;
+        }
       }
     }
   }
